# BackendCRM

./: README.md  pyproject.toml  restart_django.sh
docs/configurations/: INDEX.md
docs/functions/: INDEX.md
docs/models/: INDEX.md
docs/routes/: INDEX.md
docs/routes/routes_detail/: approve_superadmin_invite_view.md  category_example_viewset.md  chat_viewset.md  chat_window_validation_view.md  contact_whatsapp_view.md  dispatch_direct_create.md  dispatch_execute.md  dispatch_viewset.md  email_token_obtain_pair_view.md  message_category_viewset.md  metrics_view.md  my_chats_viewset_by_contact.md  my_chats_viewset_list.md  outbound_whatsapp_message_viewset.md  register_whatsapp_number.md  register_whatsapp_number_on_meta.md  resend_superadmin_invite_token_view.md  send_template_message_view.md  spectacular_api_view.md  spectacular_swagger_view.md  superadmin_invite_viewset.md  template_button_viewset.md  template_component_viewset.md  template_parameter_viewset.md  template_submission_viewset.md  token_refresh_view.md  user_preferences_viewset.md  user_viewset.md  verify_whatsapp_number.md  whatsapp_message_by_number_and_contact_view.md  whatsapp_message_by_number_view.md  whatsapp_message_view.md  whatsapp_message_webhook_view.md  whatsapp_number_view.md  whatsapp_template_viewset.md
docs/serializers/: INDEX.md
docs/technologies/: INDEX.md
docs/views/: INDEX.md
src/application/: settings.py  urls.py
src/application/templates/: approve_invite.html  invite_success.html  invite_used.html
src/application/templates/emails/: superadmin_invite.html
src/core/authentication/: managers.py
src/core/authentication/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0003_alter_user_managers.py  0004_remove_user_user_type_user_is_superadmin.py  0005_superadmininvite.py  0006_superadmininvite_password.py  0007_alter_superadmininvite_token.py  0008_userpreferences.py  0009_alter_userpreferences_user.py
src/core/authentication/models/: __init__.py  admin_invite.py  user.py
src/core/authentication/serializers/: __init__.py  admin_invite.py  user.py
src/core/authentication/views/: __init__.py  admin_invite.py  user.py
src/core/crm/: apps.py
src/core/crm/filters/: __init__.py  messages.py  messages_by_number.py
src/core/crm/migrations/: 0001_initial.py  0002_whatsappmessage.py  0003_whatsappnumber.py  0004_alter_whatsappmessage_from_number.py  0005_outboundwhatsappmessage.py  0006_alter_contactwhatsapp_number.py  0007_remove_outboundwhatsappmessage_message_text_and_more.py  0008_whatsappmessage_created_at.py  0009_remove_contactwhatsapp_display_phone_number_and_more.py  0010_chat.py  0011_outboundwhatsappmessage_chat_whatsappmessage_chat_and_more.py  0012_whatsappnumber_verified.py  0013_templatecomponent_whatsapptemplate_templateparameter_and_more.py  0014_templatebutton.py  0015_alter_whatsapptemplate_language.py  0016_templatesubmission.py  0017_messagecategory_categoryexample.py  0018_alter_messagecategory_color_and_more.py  0019_alter_categoryexample_options_and_more.py  0020_remove_categoryexample_embedding_and_more.py  0021_chat_created_at_contactwhatsapp_created_at.py  0022_dispatch.py  0023_dispatch_params.py  0024_outboundwhatsappmessage_with_template.py  0025_whatsappnumber_language_pin_status.py  0026_whatsappnumber_account_update_fields.py
(+49 files in other folders)
